# learn_gtk

./: CMakeLists.txt  main.c
